Sanitize jvm_instance and eap_instance fields.